--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="mb-4">
                         <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter Name" required  autocomplete="off"/>
+                        <input type="text" class="form-control" id="name" placeholder="Enter Name" required  autocomplete="off" pattern="[A-Za-z\s]+"  maxlength="50" />
                     </div>
                     <button type="submit" class="btn btn-danger w-100">Login</button>
                 </form>
